# eclipse

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  PIPELINE_GUIDE.md  QUICK_START.md  README.md  TEST_LLM.md  TEST_RESULTS.md  env_config.py  paper.bib  paper.md  pipeline_config.json  pyproject.toml  requirements.txt  run_complete_pipeline.py  test_all_components.py  test_api_key.py  test_llm_mutation.py
.github/workflows/: tests.yml
baselines/: __init__.py  definitions.py
config/: default.yaml  high_volume.yaml  higher_acuity.yaml  low_resource.yaml
docs/: CALIBRATION.md  CLINICAL_METRICS.md  EVALUATION_DIMENSIONS.md  POSITIONING.md
eval/: __init__.py  evaluation_dimensions.py  metrics.py  pareto.py  plots.py  run_ablation.py  run_baselines.py  run_episodes.py  run_evolution.py  run_robustness.py
evolution/: __init__.py  adaptive_mutation.py  evolve.py  llm_mutation.py  population_db.py  reproduction.py  selection.py
mechanisms/: __init__.py  genome.py  models.py  mutation.py  schema.py
results/: baselines_results.csv  best_mechanism_main_evolution.json  comprehensive_report_combined.json  comprehensive_report_combined.md  convergence_main_evolution.json  evolution_result.json  pareto_frontier.json  reproducibility_info.json
results/ablations/: ablation_study_results.json
results/ablations_test/: ablation_study_results.json
results/baselines/: FIFO_always_admit_exact_info.json  FIFO_always_admit_no_info.json  Hybrid_always_admit_coarse_info.json  Risk_threshold_gating_no_exact_info.json  Severity_always_admit_exact_info.json  Severity_always_admit_no_info.json
results/convergence/: convergence_suite_results.json
results/convergence/run_0/: best_mechanism_convergence_run_0.json  convergence_convergence_run_0.json  population_convergence_run_0.db
results/convergence/run_1/: best_mechanism_convergence_run_1.json  convergence_convergence_run_1.json  population_convergence_run_1.db
results/convergence/run_2/: best_mechanism_convergence_run_2.json  convergence_convergence_run_2.json  population_convergence_run_2.db
results/evolution/: best_gen_0.json  best_gen_1.json  convergence_seed_0.json
results/robustness/: robustness_suite_results.json
scripts/: __init__.py  make_report.py  run_ablation_suite.py  run_convergence_suite.py  run_evolution_only.py  run_full_benchmark.py  run_reproducible_benchmark.py  run_robustness_suite.py  run_transfer_evaluation.py
sim/: __init__.py  entities.py  events.py  processes.py  runner.py
